[gd_scene load_steps=7 format=1]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Character/PlayerAnimation.gd" type="Script" id=2]
[ext_resource path="res://Player/camera.gd" type="Script" id=3]
[ext_resource path="res://Player/Weapons/Minigun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Weapons/minigun_left_0.png" type="Texture" id=5]




[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 13.0
height = 20.0

[node name="PlayerNode" type="Node2D"]

[node name="Player" type="RigidBody2D" parent="."]

transform/pos = Vector2( -47.3867, 79.8341 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.87064, 0, 0, 2.69231, -6.68306, 0.165894 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 16.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( -6.68306, 0.165894 )
transform/scale = Vector2( 2.87064, 2.69231 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="AnimatedSprite" parent="Player"]

transform/pos = Vector2( 0, 1 )
transform/scale = Vector2( 4, 4 )
animation = "default"
flip_h = true
script/script = ExtResource( 2 )

[node name="FootRaycast1" type="RayCast2D" parent="Player"]

transform/pos = Vector2( -31.0105, 20.1102 )
enabled = true
cast_to = Vector2( 0, 55 )
layer_mask = 1
type_mask = 15

[node name="FootRaycast2" type="RayCast2D" parent="Player"]

transform/pos = Vector2( 19.3867, 20.5074 )
enabled = true
cast_to = Vector2( 0, 55 )
layer_mask = 1
type_mask = 15

[node name="RightRaycast" type="RayCast2D" parent="Player"]

transform/pos = Vector2( 20, -10 )
enabled = true
cast_to = Vector2( 15, 0 )
layer_mask = 1
type_mask = 15

[node name="LeftRaycast" type="RayCast2D" parent="Player"]

transform/pos = Vector2( -30.6133, -7.8341 )
enabled = true
cast_to = Vector2( -15, 0 )
layer_mask = 1
type_mask = 15

[node name="Camera2D" type="Camera2D" parent="Player"]

transform/pos = Vector2( -0.893055, 1.11979 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 3 )

[node name="Arm Right" parent="Player" instance=ExtResource( 4 )]

transform/pos = Vector2( -12, -15 )
z/z = 1
offset = Vector2( 0, 0 )

[node name="Arm Left" parent="Player" instance=ExtResource( 4 )]

transform/pos = Vector2( 10, -28 )
z/z = -1
texture = ExtResource( 5 )
offset = Vector2( 0, 0 )


